--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint-plugin-react": "^7.24.0",
+    "leaflet": "^1.7.1",
     "next": "11.0.1",
     "next-pwa": "^5.2.23",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.0",
     "styled-components": "^5.3.0",
     "webpack": "4"
   },
@@ -32,6 +34,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
+    "@types/leaflet": "^1.7.4",
     "@types/react": "^17.0.13",
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.13.1",
